<resources>
    <string name="app_name">MoeCleaner</string>

    <string name="title_home">Home</string>
    <string name="title_junk_clean">Junk File Clean</string>
    <string name="title_memory_boost">Memory Boost</string>
    <string name="title_system_info">System Information</string>
    <string name="title_app_manage">App Manage</string>

    <string name="group_title_cache_file">Cache File</string>
    <string name="group_title_unused_apk_file">Unused APK File</string>
    <string name="group_title_custom_junk_file">Other junk File</string>

    <string name="text_storage_usage">Storage Usage</string>
    <string name="text_memory_usage">Memory</string>
    <string name="text_cpu_usage">CPU</string>

    <string name="toast_press_back_once_again_to_exit">Press back once again to exit</string>
    <string name="title_cpu_frequency">CPU Frequency</string>
    <string name="title_memory_usage">Memory Usage</string>

    <string name="item_phone_model">Device Model</string>
    <string name="item_screen_resolution">Screen Resolution</string>
    <string name="item_android_version">Android Version</string>
    <string name="item_imei_or_meid">IMEI or MEID</string>
    <string name="item_wlan_mac">WLAN MAC Address</string>
    <string name="item_cpu_model">CPU Model</string>
    <string name="item_cpu_cores">Cores</string>
    <string name="item_clock_range">Clock Range</string>
    <string name="item_memory_size">RAM Size</string>

    <string name="title_basic_information">Basic Information</string>
    <string name="title_cpu_mem_information">CPU &#38; RAM Information</string>
    <string name="title_gpu_information">GPU Information</string>

    <string name="text_can_clean_cache">Cache Size: </string>
    <string name="text_scan_cache">Scan Cache File</string>

    <string name="text_can_clean_mem">Memory: </string>
    <string name="text_scan_mem">Scan Memory</string>

    <string name="toast_need_storage_permission">%1$s need permission to read/write file system.</string>
    <string name="text_can_clean">Can clean:</string>
    <string name="text_clean">Clean cache</string>
    <string name="text_scan">Scan Cache File</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

    <string name="btn_text_scanning">Scanning</string>
    <string name="btn_text_click_to_clean">Tap to clean junk file</string>
    <string name="btn_text_click_to_clean_mem">Tap to clean memory</string>
    <string name="btn_text_cleaning">Cleaning</string>
    <string name="btn_text_clean_finished">Clean finished</string>
    <string name="title_junk_clean_activity">Junk File Clean</string>

    <string name="title_activity_junk_clean">Junk Clean</string>
    <string name="title_activity_system_info">System Information</string>
    <string name="title_activity_memory_clean">Memory Clean</string>
    <string name="title_activity_app_manage">App Manage</string>

    <string name="btn_text_uninstall">Uninstall</string>
    <string name="btn_text_backup">Backup</string>

    <string name="text_all_apps">%1$d apps, %2$s in total</string>
    <string name="text_query_in_progress">Querying all third party apps</string>

    <string name="dialog_title_alert">Alert!</string>
    <string name="dialog_content_delete_confirm">Are you sure to delete %1$d app?</string>

    <string name="toast_backup_finish">%1$d app backup finish</string>
    <string name="text_clean_cache">Clean cache</string>
    <string name="text_delete">delete: %1$s</string>

</resources>
