<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.edu.bit.cs.moecleaner.MainActivity">

    <fragment
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:name="cn.edu.bit.cs.moecleaner.ui.fragment.HomeFragment"
        android:id="@+id/fragment2"
        tools:layout="@layout/fragment_home"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/linearLayout" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/item_junk_clean"
            android:tag="junk_clean">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:src="@drawable/ic_delete_sweep_white_24dp"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:paddingTop="14dp"
                android:paddingBottom="14dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/HomeEntryTitleTextStyle"
                android:text="@string/title_junk_clean"
                android:id="@+id/textView"
                android:layout_gravity="center_vertical"
                android:textColor="#ffffff"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/item_memory_clean"
            android:tag="memory_clean">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:src="@drawable/ic_memory_white_24dp"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/HomeEntryTitleTextStyle"
                android:text="@string/title_memory_boost"
                android:id="@+id/textView2"
                android:layout_gravity="center_vertical"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/item_app_manage"
            android:tag="system_info">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView3"
                android:src="@drawable/ic_android_white_24dp"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:paddingTop="14dp"
                android:paddingBottom="14dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/HomeEntryTitleTextStyle"
                android:text="@string/title_app_manage"
                android:id="@+id/textView3"
                android:layout_gravity="center_vertical"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/item_system_info"
        android:tag="system_info">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView4"
            android:src="@drawable/ic_phone_android_white_24dp"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/HomeEntryTitleTextStyle"
            android:text="@string/title_system_info"
            android:id="@+id/textView4"
            android:layout_gravity="center_vertical"
            android:textColor="#ffffff" />
    </LinearLayout>

    </LinearLayout>
</RelativeLayout>
